test/corpus/13_value_sort_expression.txt
==================
Value keeps sort expression punctuation
==================

report.minimal.sort=project+/,description+

---

(source_file
  (assignment
    key: (key)
    value: (value
      (raw_value))))
