test/corpus/15_value_trailing_comma_blank_member.txt
==================
Value allows trailing comma blank member
==================

uda.estimate.values=huge,large,medium,small,trivial,

---

(source_file
  (assignment
    key: (key)
    value: (value
      (raw_value))))
