test/corpus/29_blank_lines_between_entries.txt
==================
Blank lines between entries
==================

# header

include dark-16.theme

color=off

---

(source_file
  (comment)
  (include_statement
    target: (include_target))
  (assignment
    key: (key)
    value: (value
      (raw_value))))
