test/corpus/34_report_labels.txt
==================
Report labels list
==================

report.list.labels=ID,Active,Age,D,P,Project,Tags,R,Sch,Due,Until,Description,Urg

---

(source_file
  (assignment
    key: (key)
    value: (value
      (raw_value))))
