test/corpus/49_invalid_multiline_continuation.txt
==================
Multiline continuation is invalid
==================

default.command=project:foo
 list

---

(source_file
  (assignment
    key: (key)
    value: (value
      (raw_value)))
  (ERROR
    (key)))
